fix navigation button gap

--- a/src/stylesheet/pc.scss
+++ b/src/stylesheet/pc.scss
@@ -39,17 +39,17 @@ $device-width: 1190px;
         cursor: pointer;
         border: 1px solid $elysia-color--deep;
 
-        width: 147px;
-        height: 37px;
-        border-radius: 20px;
-        margin-left: 50px;
+        width: 165px;
+        height: 48px;
+        border-radius: 48px;
+        margin-left: 15px;
         &__status {
           color: $elysia-color--deep;
         }
         &--connected {
           width: 170px;
           height: 48px;
-          margin-left: 30px;
+          margin-left: 15px;
           display: inline-flex;
           border-radius: 5px;
           background: $background-color;
